# dtr_nne_py

./: .gitignore  alembic.ini  dtr_nne.db  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3ba97a075656_added_news_outlet_table.py  990adf1948f0_initial.py  d893330a939b_zenrows_and_deepl_api_tables.py
business/external_service_manager/: check_external_service_key_manager.py  external_service_manager.py
business/outlet_manager/: newsoutlet_manager.py
controllers/: newsoutlet_controller.py
datalayer/dbcontext/: dbcontext.py
datalayer/repositories/: api_keys_repository.py  generic_repository.py  newsoutlet_repository.py
datalayer/unitofwork/: unit_of_work.py
helpers/: duplicates_helper.py  validity_helper.py
mappers/: model_tablename_mapper.py  newsoutlet_mapper.py
middleware/: basic_auth.py
models/domainmodels/: chatgptmodel.py  deepl.py  newsoutlet.py  zenrows.py
models/dto/: newsoutlet_dto.py
tests/: clear_table.py  make_requests.py
tests/api_tests/: test_newsoutlet_api.py
tests/helper_tests/: test_duplicates_helper.py  test_validity_helper.py
tests/mapper_tests/: test_newsoutlet_mapper.py  test_tablename_mapper.py
tests/mocks/: newsoutlet_mocks.py
tests/newsoutlet_tests/: clear_newsoutlets_table.py  dtr_nne.db  helpers_tests.py  make_requests.py  newsoulet_tests.py  test_newsoutlet_add.py  test_newsoutlet_api.py  test_newsoutlet_edit.py  test_newsoutlet_extra.py  test_newsoutlet_remove.py  test_newsoutlets_get.py
tests/report/: report.html
tests/repository_tests/: test_api_repository.py
(+6 files in other folders)
